@@ -30,6 +30,7 @@ v.0.5dev (ongoing development)
  * allow wrapping slider menu items with <= 4 keys (M. Dolze)
  * a bit more Doxygen-ation and documentation
  * hd44780 driver: make ConnectionType 4bit more fool-proof (M. Dolze)
+ * picolcd driver: overhaul USB init for more portability (M. Dolze)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
